--- a/components/Card/card.module.scss
+++ b/components/Card/card.module.scss
@@ -13,9 +13,10 @@
 }
 
 .cardImage {
-	width: 100%;
-	height: auto;
 	border-radius: 0.5rem 0.5rem 0 0;
+	object-fit: cover;
+	width: 100%;
+	height: 300%;
 }
 
 .cardInfo {
@@ -40,7 +41,7 @@
 
 .cardLike {
 	position: absolute;
-	bottom: 1rem;
+	top: 1rem;
 	right: 1rem;
 	display: flex;
 	align-items: center;
